<resources>
    <string name="app_name">Infinite S</string>

    <string name="ERROR_FIELD_REQUIRED">Field Tidak Boleh Kosong</string>
    <string name="something_wrong">Oops.. something went wrong</string>
    <string name="tittle_splash">Learning Management System</string>
    <string name="image_description">Image</string>
    <string name="txt_fitur_lms">Fitur LMS</string>
    <string name="txt_mulai_belajar_dari_sini">Mulai Belajar dari sini :)</string>
    <string name="txt_lihat_perjalanan_kamu_disni">Lihat perjalanan kamu disni</string>
    <string name="txt_student">Student</string>
    <string name="txt_roadmap">Roadmap</string>
    <string name="txt_search_materi">Search Materi</string>
    <string name="txt_learing_proposal">Learning Proposal</string>
    <string name="txt_informasi">Informasi</string>
    <string name="proposal_title">Curiculum</string>
    <string name="txt_learning_proposal">Learning Proposal</string>
    <string name="txt_rencanakan_strategimu_di_sini">Rencanakan staregimu di sini :)</string>
    <string name="txt_manage_all_learning_curriculum">Manage all learning curriculum</string>
    <string name="txt_curriculum_management">Curriculum Management</string>
    <string name="txt_cari_disini">Cari disini ...</string>
    <string name="txt_update">Update</string>
    <string name="txt_delete">Delete</string>
    <string name="txt_judul_event">Judul event : </string>
    <string name="txt_company">Company :</string>
    <string name="txt_type">Type : </string>
    <string name="txt_description">Description : </string>
    <string name="txt_begin_date">Begin Date :</string>
    <string name="txt_end_date">End Date : </string>
    <string name="txt_level">Level : </string>
    <string name="txt_create_curriculum_request">Create Curiculum Request</string>
    <string name="txt_periksa_dan_lakukan_perubahan">Periksa dan lakukan perrubahan.</string>
    <string name="txt_pilih_perusahaan">Pilih Perusahaan</string>
    <string name="txt_curriculum_request_name">Curiculum Request Name</string>
    <string name="txt_isi_curiculum_request_name">Isi curiculum request name</string>
    <string name="txt_isi_deskripsi">isi Deskripsi</string>
    <string name="pilih_tipe">Pilih Tipe</string>
    <string name="txt_competency">Competency</string>
    <string name="txt_pilih_competency">Pilih Competency</string>
    <string name="txt_proficiency_level">Proficiency Level</string>
    <string name="txt_pilih_level">Pilih proficiency level</string>
    <string name="txt_start_date">Begin Date</string>
    <string name="txt_pilih_tanggal">Pilih tanggal</string>
    <string name="txt_create">Buat</string>
    <string name="txt_update_curriculum_request">Update Curriculum Request</string>
    <string name="txt_lihat_materi_disini">Lihat materi disini :)</string>
    <string name="txt_select_master">Select Master</string>
    <string name="txt_pilih_master">Pilih Master</string>
    <string name="txt_materi_management">Materi Management</string>
    <string name="txt_materi">Materi</string>
    <string name="txt_login">Login</string>
    <string name="txt_lupa_password">Lupa Password ? klik disini ... </string>
    <string name="txt_agency">Agency : </string>
    <string name="txt_name">Name</string>
    <string name="txt_materi_type">Materi Type : </string>
    <string name="txt_method">Method : </string>
    <string name="txt_address">Address :</string>
    <string name="txt_proficiency_level_detail">Proficiency Level :</string>
    <string name="competency">Competency :</string>
    <string name="txt_selling_price">Selling Price :</string>
    <string name="txt_purchase_price">Purchase Price :</string>
    <string name="txt_date">Date :</string>
    <string name="txt_lihat_materi">Lihat Materi</string>
    <string name="txt_detail_student">Detail Student</string>
    <string name="txt_detail">Detail</string>
    <string name="txt_session">Session</string>
    <string name="txt_forum">Forum</string>
    <string name="txt_insight">Insight</string>
    <string name="txt_location">Location :</string>
    <string name="txt_bath_type">Bath Type :</string>
    <string name="txt_curiculum">Curiculum :</string>
    <string name="txt_vendor">Vendor :</string>
    <string name="txt_event">Event :</string>
    <string name="txt_activity_list">Activity List : </string>
    <string name="txt_hanya_lihat_diskusi_yang_saya_buat">Lihat hanya diskusi yang saya buat</string>
    <string name="txt_discussion">Discussion</string>
    <string name="txt_masukan_id_dan_password_anda">Masukan Id dan Password anda</string>
    <string name="txt_username">Username</string>
    <string name="txt_password">Password</string>
    <string name="txt_schedule">Schedule</string>

    <string name="txt_urutan_untuk_mulai_test_tidak_selalu_dari_atas_ke_bawah_silahkan_kerjakan_test_sesuai_jadwal">Urutan untuk mulai test tidak selalu dari atas ke bawah !  Silahkan kerjakan test sesuai jadwal</string>
    <string name="txt_mentoring">Mentoring</string>
    <string name="txt_comment">Comment</string>
    <string name="txt_add_new_comment">type here ...</string>
    <string name="txt_create_new_forum">Create New Forum</string>
    <string name="txt_buat_obrolan_baru_disini">Buat obrolan baru disini :)</string>
    <string name="txt_forum_name">Forum name</string>
    <string name="txt_description_forum">Forum Description</string>
    <string name="txt_image">Image</string>
    <string name="txt_pilih_file">Pilih file</string>
    <string name="type_here">Tulis disini...</string>
    <string name="txt_chat">Chat</string>
    <string name="txt_update_forum">Update Forum</string>
    <string name="txt_next">NEXT</string>
    <string name="no_data">NO DATA</string>
    <string name="txt_create_new_insight">Create New Insight</string>
    <string name="txt_create_title_insight">Insight Name</string>
    <string name="txt_update_insight">Update Insight</string>
    <string name="txt_list_insight">List Insight</string>
    <string name="txt_email">Email</string>
    <string name="txt_perusahaan">Perusahaan</string>
    <string name="txt_street">Address</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_keluar">Keluar</string>
    <string name="txt_logout_message">Apakah anda yakin keluar dari aplikasi?</string>
    <string name="txt_btn_batal">Batal</string>
    <string name="txt_oke_button">Oke</string>
    <string name="txt_konfirmasi">Konfirmasi</string>
    <string name="txt_konfirmasi_content">Apakah Anda yakin Data yang di isi sudah benar?</string>
    <string name="text_batal">Batal</string>
    <string name="text_oke">Oke</string>
    <string name="text_berhasil">Berhasil</string>
    <string name="txt_confirm_curiculum">Curiculum Baru Berhasil Di Buat</string>
    <string name="txt_change_password">Change Password</string>
    <string name="invalid_password"><![CDATA[Password mus be > 5 character]]></string>
    <string name="invalid_password_match">Confirmation field password doesn\'t match</string>
    <string name="txt_re_password">Ulangi Password</string>
    <string name="txt_ganti_passwordmu_di_sini">Ganti Passwordmu di sini :)</string>
    <string name="txt_confirm_password">"password berhasil di ganti "</string>
    <string name="label_logout">Log out</string>
    <string name="msg_logout">Please login login again</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">cancel</string>
    <string name="txt_go_to_login">Go to Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_title">Title</string>
    <string name="txt_time">Time</string>
    <string name="txt_topic">Topic</string>
    <string name="txt_mentor">Mentor</string>
    <string name="txt_absensi">Absensi</string>
</resources>